manifests/Istio-ingress-controller/02-shop-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
  labels:
    app.kubernetes.io/part-of: shop-demo
    istio-injection: enabled
