manifests/Istio-ingress-controller/06-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: shop
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: shop-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: orders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orders
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: shop-demo
    spec:
      serviceAccountName: orders-sa
      containers:
        - name: orders
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=orders-service"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          volumeMounts:
            - name: orders-data
              mountPath: /data
      volumes:
        - name: orders-data
          persistentVolumeClaim:
            claimName: orders-pvc
