manifests/Istio-ingress-controller/07-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: shop
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: shop-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orders
  ports:
    - name: http
      port: 8080
      targetPort: 8080
