manifests/Istio-ingress-controller/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shop
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: shop-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
