manifests/Istio-ingress-controller/13-shop-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: shop-vs
  namespace: shop
spec:
  hosts:
    - shop.local #this is the host that we will use to access the application. We will add this host to our /etc/hosts file to point to the ingress gateway's IP address.
  gateways:
    - shop-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: orders.shop.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.shop.svc.cluster.local
            port:
              number: 80
