manifests/Istio-ingress-controller/15-cilium-allow-istio-ingressgateway-to-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-istio-ingressgateway-to-frontend
  namespace: shop
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-ingress
            istio: ingressgateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEntities:
        - cluster
